--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <!-- Add a nav tag to wrap these nested links instead of a span-->
     <nav>
+      <figure>
       <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
+      </figure>
     </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
@@ -27,10 +29,11 @@
         <!-- Wrap the nested img in a figure tag-->
         <figure>
           <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
+          </figure>
 
           <!-- Wrap this text in a figcaption tag so that it captions the image above-->
           <figcaption>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
-        </figure>
+        
 <section>
         <!-- Turn this div into an article tag-->
         <article>
